--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <div id="zomboCanvas"></div>
 
 <footer>
-    <script type="text/css" src="https://raw.github.com/orieken/zombocom/master/public/stylesheets/zombocom.css"></script>
+    <script type="text/css" src="/public/stylesheets/zombocom.css"></script>
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="application/javascript" src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.4.min.js"></script>
-    <script type="application/javascript" src="https://raw.github.com/orieken/zombocom/master/public/javascripts/zombocom.js"></script>
+    <script type="application/javascript" src="/public/javascripts/zombocom.js"></script>
 </footer>
 </body>
 </html>
